	and some dedicated diagram/layer render functions to preserve invisble
	layers when writing .drs
	* plug-ins/drs/dia-render-script-import.c : unfinished (some helpers
	to parse back .drs, but far away from real import)
	* plug-ins/drs/dia-render-script-object.c : mostly empty (should later
	include the implmentation of a DiaObject capable to render .drs
	* plug-ins/makefile.msc : build it

2009-01-20  Hans Breuer  <hans@breuer.org>

	* lib/persistence.c : use g_warning() instead of printf() for 
	pathological cases, also don't leak memory than; bug #564890.	

	* app/app_procs.c : cosmetical change when dumping pango version

	* app/undo.[ch] app/commands.[ch] app/menus.c app/diagram.c 
	  data/*-ui. : implement "Objects/Move to layer above/below" 
	(maintaining connections between layers). Fixes bug #59105.
	* samples/undo-check.dia a diagram to play with the above

	* app/load_save.c doc/diagram.dtd : load, save and document 
	<layer active="true"/>, fixes bug #568497

2009-01-18  Hans Breuer  <hans@breuer.org>

	* app/app_procs.[ch] : implement command line switches -I and -O to give
	input and output directories independent of filenames, bug #438842
	* plug-ins/postscript/diapsrenderer.c : don't unref the postscript renderer 
	font twice, fixing a crash spotted while testing the above

	* lib/dia_image.c : oops, commited before compiling - now it uses for
	message_warning() for invalid pathes _and_ includes "message"

	* app/load_save.c(read_connections) : while playing with "All Objects"
	I've got "connection point %d does not exists", now I get the more
	useful "connection point 14 does not exist on 'SISSI - area'"
	Also there was some flaw with the wants_update calculation.

	* makefile.msc lib/libdia.def : build the unit test on win32, too.

	* lib/diagramdata.c lib/layer.c : split the latter from the former to
	have more manageable pieces (one class per file)
	* lib/Makefile.am lib/makefile.msc po/POTFILES.in : updated accordingly
