@@ -1,6 +1,7 @@
 # Remember to also add subdirs in configure.in
 SUBDIRS = cgm cairo pstricks hpgl wpg svg shape dxf python xfig \
-	  wmf libart metapost xslt pixbuf pgf vdx postscript
+	  wmf libart metapost xslt pixbuf pgf vdx postscript \
+	  drs
 
 EXTRA_DIST = \
 	makefile.msc objects.def
